<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".EditProfileAct">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp">

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:background="@drawable/bg_gradient_primary_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/mregular"
                android:text="Edit Profile"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/mlight"
                android:lineSpacingExtra="9dp"
                android:text="We highly suggest you to \nuse the correct informations"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="19dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_layout_white"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/name_label"
                        android:textColor="@color/grayPrimary"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/xnama_lengkap"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/mmedium"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/bio_label"
                        android:textColor="@color/grayPrimary"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/xbio"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/mmedium"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/username_label"
                        android:textColor="@color/grayPrimary"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/xusername"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/mmedium"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/password_label"
                        android:textColor="@color/grayPrimary"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/xpassword"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/mmedium"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/email_label"
                        android:textColor="@color/grayPrimary"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/xemail_address"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/mmedium"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>

            </LinearLayout>


            <View
                android:id="@+id/view5"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="184dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_view_circle_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view2" />

            <!--<ImageView-->
            <!--android:layout_width="90dp"-->
            <!--android:layout_height="90dp"-->
            <!--android:layout_marginStart="8dp"-->
            <!--android:layout_marginTop="193dp"-->
            <!--android:layout_marginEnd="8dp"-->
            <!--android:src="@drawable/icon_nopic"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintHorizontal_bias="0.498"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="@+id/view2" />-->

            <!--<de.hdodenhof.circleimageview.CircleImageView-->
            <!--android:layout_width="90dp"-->
            <!--android:layout_height="90dp" -->
            <!--android:src="@drawable/pickamen"/>-->

            <com.github.florent37.shapeofview.shapes.CircleView
                android:id="@+id/circleView"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="193dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view2">

                <ImageView
                    android:id="@+id/xphoto_edit_profile"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/icon_nopic" />

            </com.github.florent37.shapeofview.shapes.CircleView>

            <Button
                android:id="@+id/btn_add_photo"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="64dp"
                android:background="@drawable/bg_btn_plus_blue"
                android:fontFamily="@font/mmedium"
                android:text="+"
                android:textColor="#FFF"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/circleView"
                app:layout_constraintTop_toTopOf="@+id/view5" />

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/btn_back"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@drawable/bg_layout_white"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="28dp"
                            android:src="@drawable/ic_back" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginLeft="24dp"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_edit_profile"
                        style="@style/btn_blue_primary"
                        android:text="EDIT"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>